Testing/compilefail/BlitzArraySliceIteratorError1.cc
#include "BlitzArraySliceIterator.tcc"

template class blitzplusplus::basi::Iterator<4,tmptools::Vector<3,2,3,1>,true>;